k8s/apps/karakeep/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: karakeep-web
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: 3000
